--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/playfair-display": "^5.2.8",
+    "@types/qrcode": "^1.5.6",
+    "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
+    "jose": "^6.1.3",
     "next": "16.1.3",
+    "pdf-parse": "^2.4.5",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.8.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.22.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
+    "prisma": "^5.22.0",
     "typescript": "^5"
   }
 }
