--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^2.9.0",
     "jose": "^6.1.3",
     "next": "16.1.3",
+    "openai": "^6.17.0",
     "pdf-parse": "^2.4.5",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
