--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/qrcode": "^1.5.6",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
+    "deepl-node": "^1.24.0",
     "jose": "^6.1.3",
     "next": "16.1.3",
     "openai": "^6.17.0",
