--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.2",
+    "@capacitor/cli": "^8.0.2",
+    "@capacitor/core": "^8.0.2",
     "@ducanh2912/next-pwa": "^10.2.9",
     "@fontsource/inter": "^5.2.8",
     "@fontsource/playfair-display": "^5.2.8",
@@ -27,6 +30,7 @@
     "resend": "^6.8.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@prisma/client": "^5.22.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
